# ops-agent

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: .env.example  mcp_registry.yaml
configs/projects/: demo-service.yaml
docs/: README.md  codingOpenApi.yaml  skill-mcp-reference.md
mcp_servers/: README.md  __init__.py
mcp_servers/coding/: api.py  pipeline_config.py  server.py  stage_templates.py  templates.py
mcp_servers/gitlab/: api.py  server.py
mcp_servers/jenkins/: api.py  server.py
mcp_servers/tke/: server.py
prompts/: README.md
skills/: README.md
skills/notification-setup/: SKILL.md
skills/ops-pipeline/: SKILL.md
skills/ops-pipeline/references/: new-business.md  renwupingtai.md  waibaohuodong.md
skills/pipeline-composer/: SKILL.md
skills/pipeline-param-designer/: SKILL.md
skills/pipeline-runner/: SKILL.md
skills/repo-linker/: SKILL.md
skills/trigger-configurator/: SKILL.md
src/ops_agent/: main.py
tests/: conftest.py
